# poc_mix

./: README.md
ChinesePlate/: README.md  recog.py  reqirements.txt
ObjTrack/: Dockerfile  README.md
ObjTrack/src/: requirements.txt  track.py
grpc-proxy/: README.md  greeter_client.py  greeter_server.py  requirements.txt
rtsp-server/: Dockerfile  README.md  build-rtsp.sh
rtsp-server/k8s/: rtsp-client.yml
rtsp-server/src/: CMakeLists.txt  main.c
rtsp-server/test/: client-1-1.sh  client-1-2.sh  client-2.sh  client-3.sh  server-1.sh  server-2.sh  server-3.sh
